query strategy changed