@@ -19,7 +19,6 @@ import uk.ac.ebi.protvar.model.MappingRequest;
 import uk.ac.ebi.protvar.model.SearchTerm;
 import uk.ac.ebi.protvar.types.SearchType;
 import uk.ac.ebi.protvar.types.*;
-import uk.ac.ebi.protvar.utils.SearchTypeResolver;
 
 import java.util.*;
 import java.util.regex.Matcher;
@@ -78,879 +77,744 @@ public class GenomicVariantRepo {
         boolean sortByPopEve = "popeve".equalsIgnoreCase(request.getSort());
         boolean sortByEsm1b = "esm1b".equalsIgnoreCase(request.getSort());
 
-        if (request.hasNoSearchTerms()) { // filter-only
-            // Use filter-first strategy for database-wide queries
-            return getGenomicVariantsForFilterOnlyQuery(request, pageable, isDownload,
-                    filterKnown, filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
-                    filterByConservation, filterByEsm1b, filterExperimentalModel, filterPocket,
-                    filterInteract, filterStability, sortByCadd, sortByAm, sortByPopEve, sortByEsm1b);
-        }
-
-        // Original path for identifier-based queries (this is fast)
-        return getGenomicVariantsForIdentifierQuery(request, pageable, isDownload,
-                filterKnown, filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
-                filterByConservation, filterByEsm1b, filterExperimentalModel, filterPocket,
-                filterInteract, filterStability, sortByCadd, sortByAm, sortByPopEve, sortByEsm1b);
-    }
-
-    /**
-     * OPTIMIZED: Filter-first strategy for queries without search terms.
-     * Instead of expanding all variants then filtering, we:
-     * 1. Filter each dataset independently
-     * 2. Join filtered subsets
-     * 3. Generate only matching variants
-     * Filter-only: Need to filter datasets FIRST, then intersect
-     * Pattern: Filter each dataset → Find intersection → Generate only those variants
-     */
-    private Page<VariantInput> getGenomicVariantsForFilterOnlyQuery(
-            MappingRequest request, Pageable pageable, boolean isDownload,
-            boolean filterKnown, boolean filterByCadd, boolean filterByAm,
-            boolean filterByPopEve, boolean filterByAlleleFreq,
-            boolean filterByConservation, boolean filterByEsm1b,
-            boolean filterExperimentalModel, boolean filterPocket,
-            boolean filterInteract, boolean filterStability,
-            boolean sortByCadd, boolean sortByAm, boolean sortByPopEve, boolean sortByEsm1b) {
-
         MapSqlParameterSource parameters = new MapSqlParameterSource();
-
-        // Safety check: At least one filter should be active
-        boolean hasAnyFilter = filterKnown || filterByCadd || filterByAm || filterByPopEve
-                || filterByAlleleFreq || filterByConservation || filterByEsm1b
-                || filterExperimentalModel || filterPocket || filterInteract || filterStability;
-
-        if (!hasAnyFilter) {
-            throw new IllegalArgumentException(
-                    "Database-wide queries without any filters are not supported. " +
-                            "Please specify at least one filter or provide search terms."
-            );
-        }
-
-        String sortOrder = "asc".equalsIgnoreCase(request.getOrder()) ? "asc" : "desc";
-        String fields = "m.chromosome, m.genomic_position, m.allele, m.alt_allele, m.protein_position, m.codon_position";
-
-        StringBuilder sql = new StringBuilder();
-
-        // Build CTEs for each filtered dataset
-        boolean needsCodon = filterByAm || filterByPopEve || filterByEsm1b || filterStability;
-
-        // CTE 1: Filtered allele frequencies (if applicable)
-        if (filterByAlleleFreq) {
-            sql.append(String.format("""
-                WITH filtered_allele_freq AS (
-                    SELECT chr, pos, ref, alt
-                    FROM %s
-                    WHERE 
-            """, alleleFreqTable));
-
-            List<String> afClauses = new ArrayList<>();
-            for (int i = 0; i < request.getAlleleFreq().size(); i++) {
-                AlleleFreqCategory category = request.getAlleleFreq().get(i);
-                String minParam = "afMin" + i;
-                String maxParam = "afMax" + i;
-                afClauses.add("(af >= :" + minParam + " AND af < :" + maxParam + ")");
-                parameters.addValue(minParam, category.getMin());
-                parameters.addValue(maxParam, category.getMax());
-            }
-            sql.append(String.join(" OR ", afClauses))
-                    .append("LIMIT 5000000), "); // Safety limit - adjust if needed
-        }
-
-        // CTE 2: Filtered PopEVE scores (if applicable)
-        if (filterByPopEve) {
-            sql.append(String.format("""
-                filtered_popeve AS (
-                    SELECT unp_ref.uniprot_acc, p.position, p.wt_aa, p.mt_aa, p.popeve
-                    FROM %s p
-                    INNER JOIN %s unp_ref ON unp_ref.refseq_acc = p.refseq_protein
-                    WHERE 
-                    """, popeveTable, uniprotRefseqTable));
-
-            List<String> popeveClauses = new ArrayList<>();
-            for (int i = 0; i < request.getPopeve().size(); i++) {
-                PopEveClass category = request.getPopeve().get(i);
-                String minParam = "popeveMin" + i;
-                String maxParam = "popeveMax" + i;
-
-                if (Double.isInfinite(category.getMin()) && category.getMin() < 0) {
-                    popeveClauses.add("(p.popeve < :" + maxParam + ")");
-                    parameters.addValue(maxParam, category.getMax());
-                } else if (Double.isInfinite(category.getMax())) {
-                    popeveClauses.add("(p.popeve >= :" + minParam + ")");
-                    parameters.addValue(minParam, category.getMin());
-                } else {
-                    popeveClauses.add("(p.popeve >= :" + minParam + " AND p.popeve < :" + maxParam + ")");
-                    parameters.addValue(minParam, category.getMin());
-                    parameters.addValue(maxParam, category.getMax());
-                }
-            }
-            sql.append(String.join(" OR ", popeveClauses))
-                    .append("LIMIT 5000000), "); // Safety limit
-        }
-
-        // CTE 3: Main mapping with filtered joins
-        String altAllele = filterByAlleleFreq ? "af.alt as alt_allele" : "alt.alt_allele";
-        sql.append(String.format("""
-                mapping_with_variants AS (
-                  SELECT DISTINCT\n");
-                    m.chromosome, m.genomic_position, m.allele, m.accession,
-                    m.protein_position, m.codon_position, m.protein_seq,
-                    m.codon, m.reverse_strand, %s
-                  FROM %s m
-                    """, altAllele, mappingTable));
-
-        // Strategy: Join with FILTERED datasets first, then expand variants
-        if (filterByAlleleFreq) {
-            // This is the key optimization: only expand variants that exist in filtered allele freq
-            sql.append("""
-                INNER JOIN filtered_allele_freq af ON
-                    af.chr = m.chromosome AND
-                    af.pos = m.genomic_position AND
-                    af.ref = m.allele AND
-                    af.alt <> m.allele
-                    """);
-        } else {
-            // No allele freq filter, so we need to expand all variants
-            sql.append("""
-                CROSS JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alt(alt_allele)
-                WHERE alt.alt_allele <> m.allele
-                """);
-        }
-
-        // Early filter with PopEVE if available
-        if (filterByPopEve) {
-            sql.append("""
-                INNER JOIN filtered_popeve fp ON
-                    fp.uniprot_acc = m.accession AND
-                    fp.position = m.protein_position AND
-                    fp.wt_aa = m.protein_seq
-                """);
-        }
-
-        // Add other structure/interaction filters early
-        if (filterExperimentalModel) {
-            sql.append(String.format("""
-                INNER JOIN %s struct ON
-                    struct.accession = m.accession AND
-                    m.protein_position >= struct.unp_start AND
-                    m.protein_position <= struct.unp_end
-                    """, structureTable));
-        }
-
-        if (filterPocket) {
-            sql.append(String.format("""
-                INNER JOIN %s p ON
-                    p.struct_id = m.accession AND
-                    m.protein_position = ANY(p.pocket_resid)
-                """, pocketTable));
-        }
-
-        if (filterInteract) {
-            sql.append(String.format("""
-                INNER JOIN %s i ON
-                    (i.a = m.accession AND m.protein_position = ANY(i.a_residues)) OR
-                    (i.b = m.accession AND m.protein_position = ANY(i.b_residues))
-                """, interactionTable));
-        }
-
-        // Add dbsnp filter if known variants requested
-        if (filterKnown) {
-            String altAlleleCol = filterByAlleleFreq ?  "af.alt" : "alt.alt_allele";
-            sql.append(String.format("""
-                INNER JOIN %s d ON
-                    d.chr = m.chromosome AND
-                    d.pos = m.genomic_position AND
-                    d.ref = m.allele AND
-                    %s = ANY(d.known_alts)
-                    """, dbsnpLookupTable, altAlleleCol));
-        }
-
-        sql.append(")\n"); // Close CTE
-
-        // Main SELECT from the filtered CTE
-        sql.append("""
-            SELECT %s
-            FROM mapping_with_variants m
-        """);
-
-        // Add remaining joins for scoring/filtering
-        boolean joinCodonTable = needsCodon;
-        if (joinCodonTable) {
-            sql.append("""
-            LEFT JOIN codon_table c ON c.codon = upper(CASE
-              WHEN m.codon_position = 1 THEN rna_base_for_strand(m.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
-              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(m.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
-              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(m.alt_allele, m.reverse_strand)
-              ELSE m.codon
-            END)
-            """);
-        }
-
-        // Join with AlphaMissense if needed
-        if (filterByAm) {
-            sql.append(String.format("""
-            INNER JOIN %s am ON
-              am.accession = m.accession AND
-              am.position = m.protein_position AND
-              am.wt_aa = m.protein_seq AND
-              am.mt_aa = c.amino_acid
-            """, amTable));
-        }
-
-        // Join with ESM1b if needed
-        if (filterByEsm1b) {
-            sql.append(String.format("""
-            INNER JOIN %s esm ON
-              esm.accession = m.accession AND
-              esm.position = m.protein_position AND
-              esm.mt_aa = c.amino_acid
-            """, esmTable));
-        }
-
-        // Join with FoldX if needed
-        if (filterStability) {
-            sql.append(String.format("""
-            INNER JOIN %s f ON
-              f.protein_acc = m.accession AND
-              f.position = m.protein_position AND
-              f.mutated_type = c.amino_acid
-            """, foldxTable));
-        }
-
-        // Join with conservation if needed
-        if (filterByConservation) {
-            sql.append(String.format("""
-            INNER JOIN %s cons ON
-              cons.accession = m.accession AND
-              cons.position = m.protein_position AND
-              cons.aa = m.protein_seq
-            """, conservationTable));
-        }
-
-        // Add WHERE clause for remaining filters
-        sql.append("WHERE 1=1\n");
-
-        // PopEVE amino acid match (if not already filtered in CTE)
-        if (filterByPopEve && joinCodonTable) {
-            sql.append("  AND c.amino_acid IN (SELECT mt_aa FROM filtered_popeve WHERE uniprot_acc = m.accession AND position = m.protein_position)");
-        }
-
-        // AlphaMissense class filter
-        if (filterByAm) {
-            List<Integer> amValues = request.getAm().stream().map(AmClass::getValue).toList();
-            sql.append("  AND am.am_class IN (:amClasses)");
-            parameters.addValue("amClasses", amValues);
-        }
-
-        // Conservation filter
-        if (filterByConservation) {
-            if (request.getConservationMin() != null) {
-                sql.append("  AND cons.score >= :conservationMin");
-                parameters.addValue("conservationMin", request.getConservationMin());
-            }
-            if (request.getConservationMax() != null) {
-                sql.append("  AND cons.score <= :conservationMax");
-                parameters.addValue("conservationMax", request.getConservationMax());
-            }
-        }
-
-        // ESM1b filter
-        if (filterByEsm1b) {
-            if (request.getEsm1bMin() != null) {
-                sql.append("  AND esm.score >= :esm1bMin");
-                parameters.addValue("esm1bMin", request.getEsm1bMin());
-            }
-            if (request.getEsm1bMax() != null) {
-                sql.append("  AND esm.score <= :esm1bMax");
-                parameters.addValue("esm1bMax", request.getEsm1bMax());
-            }
-        }
-
-        // Stability filter
-        if (filterStability) {
-            Set<StabilityChange> changes = EnumSet.copyOf(request.getStability());
-            if (!changes.equals(EnumSet.allOf(StabilityChange.class))) {
-                if (changes.contains(StabilityChange.LIKELY_DESTABILISING)) {
-                    sql.append("  AND f.foldx_ddg >= 2");
-                } else if (changes.contains(StabilityChange.UNLIKELY_DESTABILISING)) {
-                    sql.append("  AND f.foldx_ddg < 2");
-                }
-            }
-        }
-
-        // Count query
-        long total = -1;
-        if (!isDownload) {
-            String countSql = String.format(sql.toString(), "COUNT(DISTINCT (" + fields + "))");
-            LOGGER.info("Executing count query for filter-only search");
-            total = jdbcTemplate.queryForObject(countSql, parameters, Long.class);
-
-            if (total == 0) {
-                return Page.empty(pageable);
-            }
-
-            // Warn if result set is very large
-            if (total > 100000) {
-                LOGGER.warn("Filter-only query returned {} results. Consider adding more specific filters.", total);
-            }
-        }
-
-        // Sorting
-        sql.append("ORDER BY ");
-        if (sortByPopEve && filterByPopEve) {
-            fields += ", (SELECT popeve FROM filtered_popeve WHERE uniprot_acc = m.accession AND position = m.protein_position LIMIT 1) as popeve_score";
-            sql.append("popeve_score ").append(sortOrder).append(", ");
-        } else if (sortByAm && filterByAm) {
-            fields += ", am.am_pathogenicity";
-            sql.append("am.am_pathogenicity ").append(sortOrder).append(", ");
-        } else if (sortByEsm1b && filterByEsm1b) {
-            fields += ", esm.score";
-            sql.append("esm.score ").append(sortOrder).append(", ");
-        }
-        sql.append("m.chromosome, m.genomic_position, m.protein_position, m.codon_position, m.alt_allele\n");
-
-        // Pagination
-        sql.append("LIMIT :pageSize OFFSET :offset");
-        parameters.addValue("pageSize", pageable.getPageSize());
-        parameters.addValue("offset", pageable.getOffset());
-
-        // Execute query
-        String finalSql = String.format(sql.toString(), "DISTINCT " + fields);
-        LOGGER.info("Executing filter-only query");
-        LOGGER.debug("SQL: {}", finalSql);
-
-        List<VariantInput> variants = jdbcTemplate.query(
-                finalSql,
-                parameters,
-                (rs, rowNum) -> {
-                    String chr = rs.getString("chromosome");
-                    int pos = rs.getInt("genomic_position");
-                    String ref = rs.getString("allele");
-                    String alt = rs.getString("alt_allele");
-                    return new GenomicInput(
-                            String.format("%s %d %s %s", chr, pos, ref, alt),
-                            chr, pos, ref, alt
-                    );
-                }
-        );
-
-        return isDownload ?
-                new PageImpl<>(variants) :
-                new PageImpl<>(variants, pageable, total);
-    }
-
-    /**
-     * ORIGINAL PATH: Identifier-based
-     * Fast because we filter by identifier FIRST
-     * Pattern: Filter to ~1000 rows → Expand to ~3000 variants → Apply other filters
-     */
-    private Page<VariantInput> getGenomicVariantsForIdentifierQuery(
-            MappingRequest request, Pageable pageable, boolean isDownload,
-            boolean filterKnown, boolean filterByCadd, boolean filterByAm,
-            boolean filterByPopEve, boolean filterByAlleleFreq,
-            boolean filterByConservation, boolean filterByEsm1b,
-            boolean filterExperimentalModel, boolean filterPocket,
-            boolean filterInteract, boolean filterStability,
-            boolean sortByCadd, boolean sortByAm, boolean sortByPopEve, boolean sortByEsm1b) {
 
         // Determine which joins are needed
         boolean joinCadd = filterByCadd || sortByCadd;
         boolean joinAm = filterByAm || sortByAm;
         boolean joinPopEve = filterByPopEve || sortByPopEve;
         boolean joinEsm1b = filterByEsm1b || sortByEsm1b;
-        boolean joinAlleleFreq = filterByAlleleFreq;
-        boolean joinConservation = filterByConservation;
         boolean joinCodonTable = joinAm || joinPopEve || joinEsm1b || filterStability;
 
-        String sortOrder = "asc".equalsIgnoreCase(request.getOrder()) ? "asc" : "desc";
-        String fields = "m.chromosome, m.genomic_position, m.allele, m.alt_allele, m.protein_position, m.codon_position";
+        // Build query based on what we have
+        StringBuilder query = new StringBuilder();
 
-        // Build the base query
-        String dbsnpJoin = buildDbsnpJoin(filterKnown);
-        MapSqlParameterSource parameters = new MapSqlParameterSource();
-        String identifierConditions = buildIdentifierConditions(request.getSearchTerms(), parameters);
+        boolean hasIdentifiers = request.getSearchTerms() != null && !request.getSearchTerms().isEmpty();
 
-        String baseQuery = """
-					WITH mapping_with_variants AS (
-						SELECT
-							m.chromosome, m.genomic_position, m.allele, m.accession,
-							m.protein_position, m.codon_position, m.protein_seq,
-							m.codon, m.reverse_strand,
-							alt.alt_allele
-						FROM %s m
-						JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alt(alt_allele) ON TRUE
-						%s -- conditional join (e.g. dbsnp)
-						%s -- input related join/where condition
-					)
-					SELECT %s
-					FROM mapping_with_variants m
-				""";
+        if (hasIdentifiers) {
+            // STRATEGY 1: Start with identifier filtering (best case)
+            buildQueryWithIdentifiers(query, parameters,
+                    filterPocket, filterInteract, filterExperimentalModel,
+                    filterKnown, joinCodonTable,
+                    joinCadd, joinAm, joinPopEve, joinEsm1b,
+                    filterByAlleleFreq, filterByConservation, filterStability,
+                    filterByCadd, filterByAm, filterByPopEve, filterByEsm1b,
+                    request);
+        } else {
 
-        StringBuilder sql = new StringBuilder(baseQuery
-                .replaceFirst("%s", mappingTable)
-                .replaceFirst("%s", dbsnpJoin)
-                .replaceFirst("%s", identifierConditions));
+            // Safety check: At least one filter should be active
+            boolean hasAnyFilter = filterKnown || filterByCadd || filterByAm || filterByPopEve
+                    || filterByAlleleFreq || filterByConservation || filterByEsm1b
+                    || filterExperimentalModel || filterPocket || filterInteract || filterStability;
 
+            if (!hasAnyFilter) {
+                throw new IllegalArgumentException(
+                        "Database-wide queries without any filters are not supported. " +
+                                "Please specify at least one filter or provide search terms."
+                );
+            }
 
-        // Add conditional joins in optimal order
-        addConditionalJoins(sql,
-                joinCadd, joinAm, joinPopEve, joinEsm1b, joinAlleleFreq,
-                joinConservation, joinCodonTable, filterExperimentalModel,
-                filterPocket, filterInteract, filterStability,
-                filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+            if (filterPocket || filterInteract || filterExperimentalModel) {
+            // STRATEGY 2: Start with feature filters (moderately selective)
+            buildQueryWithFeatureFilters(query, parameters,
+                    filterPocket, filterInteract, filterExperimentalModel,
+                    filterKnown, joinCodonTable,
+                    joinCadd, joinAm, joinPopEve, joinEsm1b,
+                    filterByAlleleFreq, filterByConservation, filterStability,
+                    filterByCadd, filterByAm, filterByPopEve, filterByEsm1b,
+                    request);
+            } else if (filterKnown) {
+                // STRATEGY 3: Start with dbSNP filter (moderately selective)
+                buildQueryWithDbsnpFilter(query,
+                        joinCodonTable, joinCadd, joinAm, joinPopEve, joinEsm1b,
+                        filterByAlleleFreq, filterByConservation, filterStability,
+                        filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+            } else {
+                // STRATEGY 4: No highly selective filters - start with most selective score filter
+                // This is expensive but sometimes unavoidable
+                buildQueryWithScoreFilters(query,
+                        joinCodonTable, joinCadd, joinAm, joinPopEve, joinEsm1b,
+                        filterByAlleleFreq, filterByConservation, filterStability,
+                        filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+            }
+        }
 
-
-        sql.append(" WHERE 1=1");
-
-        // Add filters
-        addFilters(sql, parameters, request,
+        // Add final WHERE clause filters
+        query.append("WHERE 1=1\n");
+        addFilters(query, parameters, request,
                 filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
                 filterByConservation, filterByEsm1b, filterStability);
+
+        // Build SELECT fields - we'll add score columns dynamically
+        String baseSelect = "m.chromosome, m.genomic_position, m.allele, alleles.alt_allele, " +
+                "m.protein_position, m.codon_position, m.accession";
+        StringBuilder selectFields = new StringBuilder(baseSelect);
+
+        // Add score fields if needed for sorting
+        if (sortByCadd) selectFields.append(", cadd.score");
+        else if (sortByAm) selectFields.append(", am.am_pathogenicity");
+        else if (sortByPopEve) selectFields.append(", popeve.popeve");
+        else if (sortByEsm1b) selectFields.append(", esm.score");
 
         // Count query
         long total = -1;
         if (!isDownload) {
-            String countSql = String.format(sql.toString(), "COUNT(DISTINCT (" + fields + "))");
+            String countSql = "SELECT COUNT(*) FROM (\n" + query + "\n) counted"; // COUNT(DISTINCT(baseSelect))
             total = jdbcTemplate.queryForObject(countSql, parameters, Long.class);
 
-            // Early return if no results
             if (total == 0) {
                 return Page.empty(pageable);
             }
         }
 
-        // Sorting and pagination
-        sql.append(" ORDER BY ");
+        // Add ORDER BY
+        String sortOrder = "asc".equalsIgnoreCase(request.getOrder()) ? "ASC" : "DESC";
+        query.append("ORDER BY ");
         if (sortByCadd) {
-            fields += ", cadd.score ";
-            sql.append("cadd.score ").append(sortOrder).append(", ");
+            query.append("cadd.score ").append(sortOrder).append(", ");
         } else if (sortByAm) {
-            fields += ", am.am_pathogenicity ";
-            sql.append("am.am_pathogenicity ").append(sortOrder).append(", ");
+            query.append("am.am_pathogenicity ").append(sortOrder).append(", ");
         } else if (sortByPopEve) {
-            fields += ", popeve.popeve ";
-            sql.append("popeve.popeve ").append(sortOrder).append(", ");
+            query.append("popeve.popeve ").append(sortOrder).append(", ");
         } else if (sortByEsm1b) {
-            fields += ", esm.score ";
-            sql.append("esm.score ").append(sortOrder).append(", ");
+            query.append("esm.score ").append(sortOrder).append(", ");
         }
-        sql.append("m.protein_position, m.codon_position, m.alt_allele"); // consider removing alt_allele?
+        query.append("m.chromosome, m.genomic_position, m.protein_position, alleles.alt_allele\n");
 
-        // Pagination
-        sql.append(" LIMIT :pageSize OFFSET :offset");
+        // Add pagination
+        query.append("LIMIT :pageSize OFFSET :offset\n");
         parameters.addValue("pageSize", pageable.getPageSize());
         parameters.addValue("offset", pageable.getOffset());
 
         // Execute query
-        List<VariantInput> variants = jdbcTemplate.query(
-                String.format(sql.toString(), "DISTINCT " + fields),
-                parameters,
+        String finalQuery = "SELECT " + selectFields + " FROM (\n" + query + "\n) results"; // DISTINCT(baseSelect)
+        List<VariantInput> variants = jdbcTemplate.query(finalQuery, parameters,
                 (rs, rowNum) -> {
                     String chr = rs.getString("chromosome");
                     int pos = rs.getInt("genomic_position");
                     String ref = rs.getString("allele");
                     String alt = rs.getString("alt_allele");
                     return new GenomicInput(
-                            String.format("%s %d %s %s", chr, pos, ref, alt),
+                            "%s %d %s %s".formatted(chr, pos, ref, alt),
                             chr, pos, ref, alt
                     );
-                }
-        );
-        return isDownload ?
-                new PageImpl<>(variants) : // unpaged, total count not needed
-                new PageImpl<>(variants, pageable, total);
-    }
+        });
 
-    private <T> boolean isFilteringRequired(List<T> categories) {
-        return categories != null
-                && !categories.isEmpty();
-    }
-
-    private String buildDbsnpJoin(boolean filterKnown) {
-        // TODO consider normalising alt for full index on join incl. alt col
-        // dbsnp index:
-        //CREATE INDEX dbsnp_b156_chr_pos_ref_idx ON dbsnp_b156 (chr, pos, ref);
-        if (filterKnown) {
-            return String.format("""
-            JOIN %s d ON d.chr = m.chromosome
-                AND d.pos = m.genomic_position
-                AND d.ref = m.allele
-                AND alt.alt_allele = ANY(d.known_alts))
-        """, dbsnpLookupTable);
-        }
-        return "";
+        return isDownload ? new PageImpl<>(variants) : new PageImpl<>(variants, pageable, total);
     }
 
     /**
-     * Builds the WHERE/JOIN conditions for multiple identifiers.
-     * Combines identifiers with OR within the same type, AND across types.
-     * Returns empty condition if no identifiers provided (database-wide query).
+     * STRATEGY 1: Build query starting with identifier filtering (most selective)
      */
-    private String buildIdentifierConditions(
-            List<SearchTerm> searchTerms,
-            MapSqlParameterSource parameters) {
+    private void buildQueryWithIdentifiers(
+            StringBuilder query, MapSqlParameterSource parameters,
+            boolean filterPocket, boolean filterInteract, boolean filterExperimentalModel,
+            boolean filterKnown, boolean joinCodonTable,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterByAlleleFreq, boolean filterByConservation, boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b,
+            MappingRequest request) {
 
-        if (searchTerms == null || searchTerms.isEmpty()) {
-            // No identifiers - return all variants (filter-only query)
-            return "WHERE alt.alt_allele <> m.allele";
+        List<String> ctes = new ArrayList<>();
+        List<String> unionBranches = new ArrayList<>();
+
+        // Build identifier CTEs and UNION branches
+        buildIdentifierCTEsAndBranches(ctes, unionBranches, parameters, request.getSearchTerms());
+
+        // Start query with CTEs
+        if (!ctes.isEmpty()) {
+            query.append("WITH ").append(String.join(",\n", ctes)).append(",\n");
+        } else {
+            query.append("WITH ");
         }
 
-        // Group identifiers by type
+        // Add filtered_mapping CTE
+        query.append("filtered_mapping AS (\n");
+        query.append(String.join("\n\nUNION\n\n", unionBranches));
+        query.append("\n),\n");
+
+        // PHASE 1: Apply highly selective feature filters BEFORE alt_allele expansion
+        // This reduces the row count before multiplication
+        boolean hasFeatureFilters = filterPocket || filterInteract || filterExperimentalModel;
+
+        if (hasFeatureFilters) {
+            query.append(",\nfeature_filtered AS (\n");
+            query.append("  SELECT fm.*\n");
+            query.append("  FROM filtered_mapping fm\n");
+
+            // pocket_v2: 547K rows - highly specific positions
+            if (filterPocket) {
+                query.append("""
+                        INNER JOIN (
+                            SELECT DISTINCT struct_id, unnest(pocket_resid) as position
+                            FROM %s
+                        ) p ON p.struct_id = fm.accession AND p.position = fm.protein_position
+                        """.formatted(pocketTable));
+            }
+
+            // af2complexes_interaction: 69K rows - highly specific
+            if (filterInteract) {
+                query.append("""
+                        INNER JOIN (
+                          SELECT accession, position FROM (
+                              SELECT a as accession, unnest(a_residues) as position FROM %s
+                              UNION ALL
+                              SELECT b as accession, unnest(b_residues) as position FROM %s
+                          ) i GROUP BY accession, position
+                        ) interact ON interact.accession = fm.accession 
+                          AND interact.position = fm.protein_position
+                        """.formatted(interactionTable, interactionTable));
+            }
+
+            // rel_2025_01_structure: 203K rows - specific when filtering
+            if (filterExperimentalModel) {
+                query.append("""
+                        INNER JOIN (
+                          SELECT DISTINCT accession, unp_start, unp_end
+                          FROM %s
+                        ) struct ON struct.accession = fm.accession 
+                          AND fm.protein_position BETWEEN struct.unp_start AND struct.unp_end
+                        """.formatted(structureTable));
+            }
+
+            query.append("\n)\n");
+        }
+
+        // PHASE 2: Expand alt_alleles and calculate codon
+        String sourceTable = hasFeatureFilters ? "feature_filtered" : "filtered_mapping";
+        query.append("SELECT\n");
+        query.append("  ff.chromosome, ff.genomic_position, ff.allele, ff.accession,\n");
+        query.append("  ff.protein_position, ff.codon_position, ff.protein_seq,\n");
+        query.append("  ff.codon, ff.reverse_strand,\n");
+        query.append("  alleles.alt_allele");
+
+        if (joinCodonTable) {
+            query.append(",\n  c.amino_acid as mt_aa");
+        }
+
+        query.append("\nFROM ").append(sourceTable).append(" ff\n");
+        query.append("CROSS JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)\n");
+        query.append("  ON alleles.alt_allele <> ff.allele\n");
+
+        // PHASE 3: Calculate codon
+        if (joinCodonTable) {
+            query.append("""
+                    LEFT JOIN codon_table c ON c.codon = UPPER(CASE
+                      WHEN ff.codon_position = 1 THEN rna_base_for_strand(alleles.alt_allele, ff.reverse_strand) || substring(ff.codon, 2, 2)
+                      WHEN ff.codon_position = 2 THEN substring(ff.codon, 1, 1) || rna_base_for_strand(alleles.alt_allele, ff.reverse_strand) || substring(ff.codon, 3, 1)
+                      WHEN ff.codon_position = 3 THEN substring(ff.codon, 1, 2) || rna_base_for_strand(alleles.alt_allele, ff.reverse_strand)
+                      ELSE ff.codon
+                    END)
+                    """);
+        }
+
+        // Wrap in another SELECT to rename columns back to 'm.*'
+        String innerQuery = query.toString();
+        query.setLength(0);
+        query.append("SELECT * FROM (\n");
+        query.append(innerQuery);
+        query.append(") m\n");
+
+        // PHASE 4: Apply remaining filters and joins
+        addRemainingJoins(query, filterKnown, filterByAlleleFreq, filterByConservation,
+                joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
+                filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+    }
+
+    /**
+     * STRATEGY 2: Build query starting with feature filters (no identifiers)
+     */
+    private void buildQueryWithFeatureFilters(
+            StringBuilder query,
+            MapSqlParameterSource parameters,
+            boolean filterPocket, boolean filterInteract, boolean filterExperimentalModel,
+            boolean filterKnown, boolean joinCodonTable,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterByAlleleFreq, boolean filterByConservation, boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b,
+            MappingRequest request) {
+
+        // Use semi-join approach: find positions from feature tables, then join with mapping
+        query.append("WITH feature_positions AS (\n");
+
+        List<String> featureUnions = new ArrayList<>();
+
+        if (filterPocket) {
+            featureUnions.add(String.format("""
+          SELECT DISTINCT struct_id as accession, unnest(pocket_resid) as position
+          FROM %s
+        """, pocketTable));
+        }
+
+        if (filterInteract) {
+            featureUnions.add(String.format("""
+          SELECT accession, position FROM (
+              SELECT a as accession, unnest(a_residues) as position FROM %s
+              UNION ALL
+              SELECT b as accession, unnest(b_residues) as position FROM %s
+          ) i
+        """, interactionTable, interactionTable));
+        }
+
+        if (filterExperimentalModel) {
+            featureUnions.add(String.format("""
+          SELECT s.accession, pos as position
+          FROM %s s
+          CROSS JOIN generate_series(s.unp_start, s.unp_end) as pos
+        """, structureTable));
+        }
+
+        query.append(String.join("\n  UNION\n", featureUnions));
+        query.append("\n)\n");
+
+        // Now join with mapping table and expand alt_alleles
+        query.append(String.format("""
+      SELECT
+        m.chromosome, m.genomic_position, m.allele, m.accession,
+        m.protein_position, m.codon_position, m.protein_seq,
+        m.codon, m.reverse_strand,
+        alleles.alt_allele
+      """));
+
+        if (joinCodonTable) {
+            query.append(",\n  c.amino_acid as mt_aa");
+        }
+
+        query.append(String.format("""
+      
+      FROM %s m
+      INNER JOIN feature_positions fp 
+          ON fp.accession = m.accession 
+          AND fp.position = m.protein_position
+      CROSS JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)
+          ON alleles.alt_allele <> m.allele
+    """, mappingTable));
+
+        if (joinCodonTable) {
+            query.append("""
+          LEFT JOIN codon_table c ON c.codon = UPPER(CASE
+              WHEN m.codon_position = 1 THEN rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
+              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
+              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand)
+              ELSE m.codon
+          END)
+        """);
+        }
+
+        // Wrap and add remaining joins
+        String innerQuery = query.toString();
+        query.setLength(0);
+        query.append("SELECT * FROM (\n");
+        query.append(innerQuery);
+        query.append("\n) m\n");
+
+        addRemainingJoins(query, filterKnown, filterByAlleleFreq, filterByConservation,
+                joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
+                filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+    }
+
+    /**
+     * STRATEGY 3: Build query starting with dbSNP filter
+     */
+    private void buildQueryWithDbsnpFilter(
+            StringBuilder query,
+            boolean joinCodonTable,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterByAlleleFreq, boolean filterByConservation, boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b) {
+
+        // Start with dbSNP table (known variants)
+        query.append(String.format("""
+      SELECT
+        m.chromosome, m.genomic_position, m.allele, m.accession,
+        m.protein_position, m.codon_position, m.protein_seq,
+        m.codon, m.reverse_strand,
+        alt.alt_allele
+      """));
+
+        if (joinCodonTable) {
+            query.append(",\n  c.amino_acid as mt_aa");
+        }
+
+        query.append(String.format("""
+      
+      FROM %s d
+      CROSS JOIN LATERAL unnest(d.known_alts) AS alt(alt_allele)
+      INNER JOIN %s m ON m.chromosome = d.chr
+          AND m.genomic_position = d.pos
+          AND m.allele = d.ref
+    """, dbsnpLookupTable, mappingTable));
+
+        if (joinCodonTable) {
+            query.append("""
+          LEFT JOIN codon_table c ON c.codon = UPPER(CASE
+              WHEN m.codon_position = 1 THEN rna_base_for_strand(alt.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
+              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alt.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
+              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alt.alt_allele, m.reverse_strand)
+              ELSE m.codon
+          END)
+        """);
+        }
+
+        // Wrap and add remaining joins
+        String innerQuery = query.toString();
+        query.setLength(0);
+        query.append("SELECT * FROM (\n");
+        query.append(innerQuery);
+        query.append("\n) m\n");
+
+        addRemainingJoins(query, false, filterByAlleleFreq, filterByConservation,
+                joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
+                filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+    }
+
+    /**
+     * STRATEGY 4: Build query with score filters only (least optimal - full table scan risk)
+     */
+    private void buildQueryWithScoreFilters(
+            StringBuilder query,
+            boolean joinCodonTable,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterByAlleleFreq, boolean filterByConservation, boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b) {
+
+        // No highly selective filters - must scan mapping table
+        // At least expand alt_alleles and compute codon first before joining huge score tables
+        query.append(String.format("""
+      SELECT
+        m.chromosome, m.genomic_position, m.allele, m.accession,
+        m.protein_position, m.codon_position, m.protein_seq,
+        m.codon, m.reverse_strand,
+        alleles.alt_allele
+      """));
+
+        if (joinCodonTable) {
+            query.append(",\n  c.amino_acid as mt_aa");
+        }
+
+        query.append(String.format("""
+      
+      FROM %s m
+      CROSS JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)
+          ON alleles.alt_allele <> m.allele
+    """, mappingTable));
+
+        if (joinCodonTable) {
+            query.append("""
+          LEFT JOIN codon_table c ON c.codon = UPPER(CASE
+              WHEN m.codon_position = 1 THEN rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
+              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
+              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand)
+              ELSE m.codon
+          END)
+        """);
+        }
+
+        // Wrap and add remaining joins
+        String innerQuery = query.toString();
+        query.setLength(0);
+        query.append("SELECT * FROM (\n");
+        query.append(innerQuery);
+        query.append("\n) m\n");
+
+        addRemainingJoins(query, false, filterByAlleleFreq, filterByConservation,
+                joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
+                filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+    }
+
+    /*
+    Critical indexes:
+    -- Essential for refseq queries (accession-only lookup)
+    CREATE INDEX idx_mapping_accession ON rel_2025_01_genomic_protein_mapping (accession);
+
+    -- Essential for pdb queries (accession + position lookup)
+    CREATE INDEX idx_mapping_acc_pos ON rel_2025_01_genomic_protein_mapping (accession, start_pos, end_pos);
+
+    CREATE INDEX idx_mapping_gene_name ON rel_2025_01_genomic_protein_mapping (gene_name);
+
+    CREATE INDEX idx_mapping_ensg ON rel_2025_01_genomic_protein_mapping (ensg);
+    CREATE INDEX idx_mapping_enst ON rel_2025_01_genomic_protein_mapping (enst);
+    CREATE INDEX idx_mapping_ensp ON rel_2025_01_genomic_protein_mapping (ensp);
+
+    -- Composite indexes for version matching
+    CREATE INDEX idx_mapping_ensg_ver ON rel_2025_01_genomic_protein_mapping (ensg, ensgv);
+    CREATE INDEX idx_mapping_enst_ver ON rel_2025_01_genomic_protein_mapping (enst, enstv);
+    CREATE INDEX idx_mapping_ensp_ver ON rel_2025_01_genomic_protein_mapping (ensp, enspv);
+
+
+    -- For the CASE condition (LIKE and = operations)
+    CREATE INDEX idx_refseq_acc_pattern ON rel_2025_01_uniprot_refseq (refseq_acc varchar_pattern_ops);
+    -- For the JOIN output (optional but recommended)
+    CREATE INDEX idx_uniprot_acc ON rel_2025_01_uniprot_refseq (uniprot_acc);
+
+    -- For PDB lookup
+    CREATE INDEX idx_pdb_mapping_id ON rel_2025_01_pdb_mapping (pdb_id);
+     */
+    private void buildIdentifierCTEsAndBranches(List<String> ctes, List<String> unionBranches,
+                                                MapSqlParameterSource parameters,
+                                                List<SearchTerm> searchTerms) {
+        // Parse identifiers by type
         Map<SearchType, List<String>> identifiersByType = searchTerms.stream()
                 .collect(Collectors.groupingBy(
                         SearchTerm::getType,
                         Collectors.mapping(SearchTerm::getValue, Collectors.toList())
                 ));
 
-        // Build conditions for each type
-        List<String> typeConditions = new ArrayList<>();
-        StringBuilder joins = new StringBuilder();
-        int paramCounter = 0;
+        List<String> refseqIds = identifiersByType.get(SearchType.REFSEQ);
+        List<String> pdbIds = identifiersByType.get(SearchType.PDB);
+        List<String> uniprotIds = identifiersByType.get(SearchType.UNIPROT);
+        List<String> geneIds = identifiersByType.get(SearchType.GENE);
+        List<String> ensemblIds = identifiersByType.get(SearchType.ENSEMBL);
 
-        for (Map.Entry<SearchType, List<String>> entry : identifiersByType.entrySet()) {
-            SearchType type = entry.getKey();
-            List<String> values = entry.getValue();
-
-            if (values.size() == 1) {
-                // Optimized single-value condition
-                IdentifierCondition condition = buildSingleIdentifierCondition(
-                        values.get(0), type, parameters, paramCounter
-                );
-                if (condition.join != null) {
-                    joins.append(condition.join);
-                }
-                typeConditions.add(condition.whereClause);
-                paramCounter++;
+        // Add RefSeq CTE if needed
+        if (refseqIds != null && !refseqIds.isEmpty()) {
+            if (refseqIds.size() == 1) {
+                // Single input - simple WHERE clause
+                String refseqAcc = refseqIds.get(0);
+                ctes.add("""
+                    refseq_acc AS (
+                        SELECT DISTINCT r.uniprot_acc
+                        FROM %s r
+                        WHERE r.refseq_acc %s
+                    """.formatted(
+                    uniprotRefseqTable,
+                    refseqAcc.contains(".") ? "= :refseqAcc" : "LIKE :refseqAcc || '.%%'"));
+                parameters.addValue("refseqAcc", refseqAcc);
             } else {
-                // Multiple values of same type - use OR
-                IdentifierCondition condition = buildMultiIdentifierCondition(
-                        values, type, parameters, paramCounter
-                );
-                if (condition.join != null) {
-                    joins.append(condition.join);
-                }
-                typeConditions.add(condition.whereClause);
-                paramCounter += values.size();
+                // Multiple inputs - VALUES with JOIN
+                ctes.add("""
+                    refseq_acc AS (
+                        SELECT DISTINCT r.uniprot_acc
+                        FROM %s r
+                        JOIN unnest(:refseqAccs) AS input(acc) ON (
+                            CASE
+                                WHEN input.acc LIKE '%%.%%' THEN r.refseq_acc = input.acc
+                                ELSE r.refseq_acc LIKE input.acc || '.%%'
+                            END
+                        )
+                    )
+                    """.formatted(uniprotRefseqTable));
+                parameters.addValue("refseqAccs", refseqIds.toArray(new String[0]));
             }
+
+            unionBranches.add("""
+                SELECT m.*
+                FROM %s m
+                JOIN refseq_acc ra ON m.accession = ra.uniprot_acc
+                """.formatted(mappingTable));
         }
 
-        // Combine all conditions with AND, add common filter
-        String whereClause = typeConditions.isEmpty()
-                ? "WHERE alt.alt_allele <> m.allele"
-                : "WHERE (" + String.join(" OR ", typeConditions) + ")  AND alt.alt_allele <> m.allele";
+        // Add PDB CTE if needed
+        if (pdbIds != null && !pdbIds.isEmpty()) {
+            ctes.add("""
+                pdb_acc AS (
+                    SELECT DISTINCT p.accession, p.unp_start, p.unp_end
+                    FROM %s p
+                    WHERE p.pdb_id = ANY(:pdbIds)
+                )
+                """.formatted(structureTable));
+            parameters.addValue("pdbIds", pdbIds.toArray(new String[0]));
+            unionBranches.add("""
+                SELECT m.*
+                FROM %s m
+                JOIN pdb_acc pa ON m.accession = pa.accession 
+                    AND m.protein_position BETWEEN pa.unp_start AND pa.unp_end
+                """.formatted(mappingTable));
+        }
 
-        return joins + "\n" + whereClause;
+        if (uniprotIds != null && !uniprotIds.isEmpty()) {
+            unionBranches.add("""
+                SELECT m.*
+                FROM %s m
+                WHERE m.accession = ANY(:uniprotAccs)
+                """.formatted(mappingTable));
+            parameters.addValue("uniprotAccs", uniprotIds.toArray(new String[0]));
+        }
+
+        if (geneIds != null && !geneIds.isEmpty()) {
+            unionBranches.add("""
+                SELECT m.*
+                FROM %s m
+                WHERE m.gene_name = ANY(:geneIds)
+                """.formatted(mappingTable));
+            parameters.addValue("geneIds", geneIds.toArray(new String[0]));
+        }
+
+        if (ensemblIds != null && !ensemblIds.isEmpty()) {
+
+            List<String> conditions = buildEnsemblConditions(ensemblIds, parameters);
+            if (!conditions.isEmpty()) {
+                unionBranches.add("""
+                    SELECT m.*
+                    FROM %s m
+                    WHERE %s
+                    """.formatted(mappingTable, String.join(" OR ", conditions)));
+            }
+        }
     }
+
+    private List<String> buildEnsemblConditions(
+            List<String> ensemblIds,
+            MapSqlParameterSource parameters) {
+
+        List<String> conditions = new ArrayList<>();
+
+        for (int i = 0; i < ensemblIds.size(); i++) {
+            String id = ensemblIds.get(i);
+            Matcher matcher = Pattern.compile("^(ENS[GTPE])(\\d{11})(\\.\\d+)?$",
+                    Pattern.CASE_INSENSITIVE).matcher(id);
+
+            if (!matcher.matches()) continue;
+
+            String prefix = matcher.group(1).toUpperCase();
+            String baseId = prefix + matcher.group(2);
+            String versionStr = matcher.group(3);
+            String version = versionStr != null ? versionStr.substring(1) : null;
+
+            String idColumn = switch (prefix) {
+                case "ENSG" -> "ensg";
+                case "ENST" -> "enst";
+                case "ENSP" -> "ensp";
+                // ENSE?
+                default -> null;
+            };
+
+            if (idColumn == null) continue;
+
+            String idParam = "ensId_" + i;
+            parameters.addValue(idParam, baseId);
+
+            String condition = "m." + idColumn + " = :" + idParam;
+
+            if (version != null) {
+                String versionParam = "ensVer_" + i;
+                parameters.addValue(versionParam, version);
+                condition += " AND m." + idColumn + "v = :" + versionParam;
+            }
+
+            conditions.add("(" + condition + ")");
+        }
+
+        return conditions;
+    }
+
 
     /**
-     * Builds condition for a single identifier value.
+     * Add remaining joins in optimal order (after base filtering)
      */
-    private IdentifierCondition buildSingleIdentifierCondition(
-            String value,
-            SearchType type,
-            MapSqlParameterSource parameters,
-            int paramIndex) {
-
-        String paramName = "id" + paramIndex;
-
-        return switch (type) {
-            case UNIPROT -> {
-                parameters.addValue(paramName, value);
-                yield new IdentifierCondition(null, "m.accession = :" + paramName);
-            }
-
-            case GENE -> {
-                parameters.addValue(paramName, value);
-                yield new IdentifierCondition(null, "m.gene_name = :" + paramName);
-            }
-
-            case ENSEMBL -> buildEnsemblCondition(value, parameters, paramIndex);
-
-            case PDB -> {
-                parameters.addValue(paramName, value);
-                String join = String.format("""
-                    INNER JOIN (
-                        SELECT DISTINCT accession, unp_start, unp_end
-                        FROM %s
-                        WHERE pdb_id = LOWER(:%s)
-                    ) s%d ON m.accession = s%d.accession
-                """, structureTable, paramName, paramIndex, paramIndex);
-                yield new IdentifierCondition(
-                        join,
-                        "m.protein_position BETWEEN s" + paramIndex + ".unp_start AND s" + paramIndex + ".unp_end"
-                );
-            }
-
-            case REFSEQ -> buildRefseqCondition(value, parameters, paramIndex);
-
-            default -> new IdentifierCondition(null, "1=1");
-        };
-    }
-
-    /**
-     * Builds condition for multiple identifier values of the same type.
-     */
-    private IdentifierCondition buildMultiIdentifierCondition(
-            List<String> values,
-            SearchType type,
-            MapSqlParameterSource parameters,
-            int startParamIndex) {
-
-        return switch (type) {
-            case UNIPROT -> {
-                String paramName = "ids" + startParamIndex;
-                parameters.addValue(paramName, values);
-                yield new IdentifierCondition(null, "m.accession IN (:" + paramName + ")");
-            }
-
-            case GENE -> {
-                String paramName = "ids" + startParamIndex;
-                parameters.addValue(paramName, values);
-                yield new IdentifierCondition(null, "m.gene_name IN (:" + paramName + ")");
-            }
-
-            case ENSEMBL -> {
-                // Build OR condition for multiple Ensembl IDs
-                List<String> conditions = new ArrayList<>();
-                for (int i = 0; i < values.size(); i++) {
-                    IdentifierCondition cond = buildEnsemblCondition(
-                            values.get(i), parameters, startParamIndex + i
-                    );
-                    conditions.add(cond.whereClause);
-                }
-                yield new IdentifierCondition(null, "(" + String.join(" OR ", conditions) + ")");
-            }
-
-            case PDB -> {
-                // Multiple PDB structures
-                String paramName = "ids" + startParamIndex;
-                parameters.addValue(paramName, values.stream()
-                        .map(String::toLowerCase)
-                        .toList());
-                String join = String.format("""
-                    INNER JOIN (
-                        SELECT DISTINCT accession, unp_start, unp_end
-                        FROM %s
-                        WHERE pdb_id IN (:%s)
-                    ) s%d ON m.accession = s%d.accession
-                """, structureTable, paramName, startParamIndex, startParamIndex);
-                yield new IdentifierCondition(
-                        join,
-                        "m.protein_position BETWEEN s" + startParamIndex + ".unp_start AND s" + startParamIndex + ".unp_end"
-                );
-            }
-
-            case REFSEQ -> {
-                // Build OR condition for multiple RefSeq IDs
-                List<String> joins = new ArrayList<>();
-                List<String> conditions = new ArrayList<>();
-                for (int i = 0; i < values.size(); i++) {
-                    IdentifierCondition cond = buildRefseqCondition(
-                            values.get(i), parameters, startParamIndex + i
-                    );
-                    if (cond.join != null) {
-                        joins.add(cond.join);
-                    }
-                    conditions.add(cond.whereClause);
-                }
-                yield new IdentifierCondition(
-                        String.join("\n", joins),
-                        "(" + String.join(" OR ", conditions) + ")"
-                );
-            }
-
-            default -> new IdentifierCondition(null, "1=1");
-        };
-    }
-
-    private IdentifierCondition buildEnsemblCondition(
-            String value,
-            MapSqlParameterSource parameters,
-            int paramIndex) {
-
-        Matcher matcher = Pattern.compile("^(ENS[GTPE])(\\d{11})(\\.\\d+)?$", Pattern.CASE_INSENSITIVE)
-                .matcher(value);
-
-        if (!matcher.matches()) {
-            return new IdentifierCondition(null, "1=0"); // Invalid format - exclude
-        }
-
-        String prefix = matcher.group(1).toUpperCase();
-        String baseId = prefix + matcher.group(2);
-        String versionStr = matcher.group(3);
-        String version = versionStr != null ? versionStr.substring(1) : null;
-
-        String idColumn = switch (prefix) {
-            case "ENSG" -> "ensg";
-            case "ENST" -> "enst";
-            case "ENSP" -> "ensp";
-            default -> null;
-        };
-
-        if (idColumn == null) {
-            return new IdentifierCondition(null, "1=0"); // Unsupported type
-        }
-
-        String idParam = "ensId" + paramIndex;
-        parameters.addValue(idParam, baseId);
-
-        String condition = "m." + idColumn + " = :" + idParam;
-
-        if (version != null) {
-            String versionParam = "ensVer" + paramIndex;
-            parameters.addValue(versionParam, version);
-            condition += " AND m." + idColumn + "v = :" + versionParam;
-        }
-
-        return new IdentifierCondition(null, condition);
-    }
-
-    private IdentifierCondition buildRefseqCondition(
-            String value,
-            MapSqlParameterSource parameters,
-            int paramIndex) {
-
-        Matcher matcher = SearchTypeResolver.REFSEQ_REGEX.matcher(value);
-        boolean hasVersion = matcher.matches() && matcher.group(2) != null;
-
-        String paramName = "refseq" + paramIndex;
-        String whereClause = hasVersion
-                ? "r" + paramIndex + ".refseq_acc = :" + paramName
-                : "r" + paramIndex + ".refseq_acc ILIKE :" + paramName + " || '.%%'";
-
-        parameters.addValue(paramName, value);
-
-        String join = String.format("""
-            INNER JOIN (
-                SELECT DISTINCT uniprot_acc
-                FROM %s
-                WHERE %s
-            ) r%d ON m.accession = r%d.uniprot_acc
-        """, uniprotRefseqTable, whereClause, paramIndex, paramIndex);
-
-        return new IdentifierCondition(join, "1=1"); // Condition is in the join
-    }
-
-    private void addConditionalJoins(
-            StringBuilder sql,
+    private void addRemainingJoins(
+            StringBuilder query,
+            boolean filterKnown,
+            boolean filterByAlleleFreq, boolean filterByConservation,
             boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
-            boolean joinAlleleFreq, boolean joinConservation, boolean joinCodonTable,
-            boolean filterExperimentalModel, boolean filterPocket, boolean filterInteract,
-            boolean filterStability, boolean filterByCadd, boolean filterByAm,
-            boolean filterByPopEve, boolean filterByEsm1b) {
+            boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve,
+            boolean filterByEsm1b) {
 
-        // 1. Genomic-level joins first (most selective)
+        // dbSNP filter (if not already applied in Strategy 3)
+        if (filterKnown) {
+            query.append("""
+                    INNER JOIN %s d ON d.chr = m.chromosome
+                      AND d.pos = m.genomic_position
+                      AND d.ref = m.allele
+                      AND m.alt_allele = ANY(d.known_alts)
+                    """.formatted(dbsnpLookupTable));
+        }
+
+        // Conservation (14M rows - moderately selective)
+        if (filterByConservation) {
+            query.append("""
+                    INNER JOIN %s cons ON cons.accession = m.accession 
+                      AND cons.position = m.protein_position 
+                      AND cons.aa = m.protein_seq
+                    """.formatted(conservationTable));
+        }
+
+        // Allele frequency (52M rows - moderately selective)
+        if (filterByAlleleFreq) {
+            query.append("""
+                    INNER JOIN %s af ON af.chr = m.chromosome 
+                      AND af.pos = m.genomic_position 
+                      AND af.ref = m.allele 
+                      AND af.alt = m.alt_allele
+                    """.formatted(alleleFreqTable));
+        }
+
+        // Large score tables - join LAST (500M, 216M, etc.)
+        addScoreTableJoins(query,
+                joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
+                filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+    }
+
+    /**
+     * Add large score table joins (always join these LAST)
+     */
+    private void addScoreTableJoins(
+            StringBuilder query,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve,
+            boolean filterByEsm1b) {
+        // Use LEFT JOIN if only for sorting to avoid unnecessary filtering
+
+        // CADD: 500M rows
         if (joinCadd) {
             String joinType = filterByCadd ? "INNER" : "LEFT";
-            sql.append(String.format("""
-                %s JOIN %s cadd ON
-                    cadd.chromosome = m.chromosome AND
-                    cadd.position = m.genomic_position AND
-                    cadd.reference_allele = m.allele AND
-                    cadd.alt_allele = m.alt_allele
-            """, joinType, caddTable));
+            query.append("""
+                %s JOIN %s cadd ON cadd.chromosome = m.chromosome 
+                  AND cadd.position = m.genomic_position 
+                  AND cadd.reference_allele = m.allele 
+                  AND cadd.alt_allele = m.alt_allele
+                """.formatted(joinType, caddTable));
         }
 
-        if (joinAlleleFreq) {
-            sql.append(String.format("""
-                INNER JOIN %s af ON
-                    af.chr = m.chromosome AND
-                    af.pos = m.genomic_position AND
-                    af.ref = m.allele AND
-                    af.alt = m.alt_allele
-            """, alleleFreqTable));
-        }
-
-        // 2. Protein-level joins requiring codon calculation
-        if (joinCodonTable) {
-            sql.append("""
-                LEFT JOIN codon_table c ON c.codon = upper(CASE
-                    WHEN m.codon_position = 1 THEN rna_base_for_strand(m.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
-                    WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(m.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
-                    WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(m.alt_allele, m.reverse_strand)
-                    ELSE m.codon
-                END)
-            """);
-        }
-
+        // AlphaMissense: 216M rows
         if (joinAm) {
             String joinType = filterByAm ? "INNER" : "LEFT";
-            sql.append(String.format("""
-                %s JOIN %s am ON
-                    am.accession = m.accession AND
-                    am.position = m.protein_position AND
-                    am.wt_aa = m.protein_seq AND -- this may be removed
-                    am.mt_aa = c.amino_acid
-            """, joinType, amTable));
+            query.append("""
+                %s JOIN %s am ON am.accession = m.accession 
+                  AND am.position = m.protein_position 
+                  AND am.wt_aa = m.protein_seq 
+                  AND am.mt_aa = m.mt_aa
+                """.formatted(joinType, amTable));
         }
 
+        // PopEVE: 185M rows (also needs RefSeq lookup)
         if (joinPopEve) {
             String joinType = filterByPopEve ? "INNER" : "LEFT";
-            // Changed alias from 'r' to 'unp_ref' to avoid conflict with RefSeq input condition
-            sql.append(String.format("""
+            // RefSeq: 113K rows
+            query.append("""
                 %s JOIN %s unp_ref ON unp_ref.uniprot_acc = m.accession
-                %s JOIN %s popeve ON
-                    popeve.refseq_protein = unp_ref.refseq_acc AND
-                    popeve.position = m.protein_position AND
-                    popeve.wt_aa = m.protein_seq AND
-                    popeve.mt_aa = c.amino_acid
-            """, joinType, uniprotRefseqTable, joinType, popeveTable));
+                %s JOIN %s popeve ON popeve.refseq_protein = unp_ref.refseq_acc 
+                  AND popeve.position = m.protein_position 
+                  AND popeve.wt_aa = m.protein_seq 
+                  AND popeve.mt_aa = m.mt_aa
+                """.formatted(joinType, uniprotRefseqTable, joinType, popeveTable));
         }
 
+        // ESM1b: 216M rows
         if (joinEsm1b) {
             String joinType = filterByEsm1b ? "INNER" : "LEFT";
-            sql.append(String.format("""
-                %s JOIN %s esm ON
-                    esm.accession = m.accession AND
-                    esm.position = m.protein_position AND
-                    esm.mt_aa = c.amino_acid
-            """, joinType, esmTable));
+            query.append("""
+                %s JOIN %s esm ON esm.accession = m.accession 
+                  AND esm.position = m.protein_position 
+                  AND esm.mt_aa = m.mt_aa
+                """.formatted(joinType, esmTable));
         }
 
-        // 3. Protein-level joins without codon
-        if (joinConservation) {
-            sql.append(String.format("""
-                INNER JOIN %s cons ON
-                    cons.accession = m.accession AND
-                    cons.position = m.protein_position AND
-                    cons.aa = m.protein_seq
-            """, conservationTable));
-        }
-
-        if (filterExperimentalModel) {
-            sql.append(String.format("""
-                INNER JOIN %s struct ON
-                    struct.accession = m.accession AND
-                    m.protein_position >= struct.unp_start AND
-                    m.protein_position <= struct.unp_end
-            """, structureTable));
-        }
-
-        if (filterPocket) {
-            sql.append(String.format("""
-                INNER JOIN %s p ON
-                    p.struct_id = m.accession AND
-                    m.protein_position = ANY(p.pocket_resid)
-            """, pocketTable));
-        }
-
-        if (filterInteract) {
-            sql.append(String.format("""
-                INNER JOIN %s i ON
-                    (i.a = m.accession AND m.protein_position = ANY(i.a_residues)) OR 
-                    (i.b = m.accession AND m.protein_position = ANY(i.b_residues))
-            """, interactionTable));
-        }
-
+        // FoldX: 209M rows
         if (filterStability) {
-            sql.append(String.format("""
-                INNER JOIN %s f ON
-                    f.protein_acc = m.accession AND
-                    f.position = m.protein_position AND
-                    f.mutated_type = c.amino_acid
-            """, foldxTable));
+            query.append("""
+                INNER JOIN %s f ON f.protein_acc = m.accession 
+                  AND f.position = m.protein_position 
+                  AND f.mutated_type = m.mt_aa
+                """.formatted(foldxTable));
         }
     }
 
+    /**
+     * Adds WHERE clause filters based on request parameters.
+     */
     private void addFilters(
             StringBuilder sql,
             MapSqlParameterSource parameters,
@@ -970,13 +834,15 @@ public class GenomicVariantRepo {
                 parameters.addValue(minParam, category.getMin());
                 parameters.addValue(maxParam, category.getMax());
             }
-            sql.append(" AND (").append(String.join(" OR ", caddClauses)).append(")");
+            sql.append("AND (").append(String.join(" OR ", caddClauses)).append(")\n");
         }
 
         // AlphaMissense filter
         if (filterByAm) {
-            List<Integer> amValues = request.getAm().stream().map(AmClass::getValue).toList();
-            sql.append(" AND am.am_class IN (:amClasses)");
+            Integer[] amValues = request.getAm().stream()
+                    .map(AmClass::getValue)
+                    .toArray(Integer[]::new);
+            sql.append("AND am.am_class = ANY(:amClasses)\n");
             parameters.addValue("amClasses", amValues);
         }
 
@@ -1001,7 +867,7 @@ public class GenomicVariantRepo {
                     parameters.addValue(maxParam, category.getMax());
                 }
             }
-            sql.append(" AND (").append(String.join(" OR ", popeveClauses)).append(")");
+            sql.append("AND (").append(String.join(" OR ", popeveClauses)).append(")\n");
         }
 
         // Allele frequency filter
@@ -1015,17 +881,17 @@ public class GenomicVariantRepo {
                 parameters.addValue(minParam, category.getMin());
                 parameters.addValue(maxParam, category.getMax());
             }
-            sql.append(" AND (").append(String.join(" OR ", afClauses)).append(")");
+            sql.append("AND (").append(String.join(" OR ", afClauses)).append(")\n");
         }
 
         // Conservation filter
         if (filterByConservation) {
             if (request.getConservationMin() != null) {
-                sql.append(" AND cons.score >= :conservationMin");
+                sql.append("AND cons.score >= :conservationMin\n");
                 parameters.addValue("conservationMin", request.getConservationMin());
             }
             if (request.getConservationMax() != null) {
-                sql.append(" AND cons.score <= :conservationMax");
+                sql.append("AND cons.score <= :conservationMax\n");
                 parameters.addValue("conservationMax", request.getConservationMax());
             }
         }
@@ -1033,11 +899,11 @@ public class GenomicVariantRepo {
         // ESM1b filter
         if (filterByEsm1b) {
             if (request.getEsm1bMin() != null) {
-                sql.append(" AND esm.score >= :esm1bMin");
+                sql.append("AND esm.score >= :esm1bMin\n");
                 parameters.addValue("esm1bMin", request.getEsm1bMin());
             }
             if (request.getEsm1bMax() != null) {
-                sql.append(" AND esm.score <= :esm1bMax");
+                sql.append("AND esm.score <= :esm1bMax\n");
                 parameters.addValue("esm1bMax", request.getEsm1bMax());
             }
         }
@@ -1047,24 +913,15 @@ public class GenomicVariantRepo {
             Set<StabilityChange> changes = EnumSet.copyOf(request.getStability());
             if (!changes.equals(EnumSet.allOf(StabilityChange.class))) {
                 if (changes.contains(StabilityChange.LIKELY_DESTABILISING)) {
-                    sql.append(" AND f.foldx_ddg >= 2");
+                    sql.append("AND f.foldx_ddg >= 2\n");
                 } else if (changes.contains(StabilityChange.UNLIKELY_DESTABILISING)) {
-                    sql.append(" AND f.foldx_ddg < 2");
+                    sql.append("AND f.foldx_ddg < 2\n");
                 }
             }
         }
     }
 
-    /**
-     * Helper class to hold JOIN and WHERE components for identifier conditions.
-     */
-    private static class IdentifierCondition {
-        final String join;        // JOIN clause (may be null)
-        final String whereClause; // WHERE condition (never null)
-
-        IdentifierCondition(String join, String whereClause) {
-            this.join = join;
-            this.whereClause = whereClause;
-        }
+    private <T> boolean isFilteringRequired(List<T> categories) {
+        return categories != null && !categories.isEmpty();
     }
 }
